Fix alignment

--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/modern/css/styles.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/modern/css/styles.css
@@ -6460,12 +6460,15 @@ only screen and (max-width: 648px) {
 	display: none;
 }
 
+.recemment-vus .price-box .regular-price {
+  display:block;
+}
+
 .recemment-vus .minimal-price-link, 
 .recemment-vus .price-box .old-price, 
 .recemment-vus .price-box .regular-price, 
 .recemment-vus .price-box .special-price {
     text-align: right;
-    display: block;
 }
 
 .recemment-vus .minimal-price-link span.label {
